--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,46 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App .contentContainer {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 992px) {
+  .App .contentContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .App textarea {
+    min-height: 200px;
+    min-width: 300px;
+  }
+}
+
+.App .textareaContainer {
+  margin: 8px;
+}
+
+.App textarea {
+  height: 100%;
+  width: 100%;
+  min-height: 300px;
+  max-width: 400px;
+}
+
+.App * {
+  font-family: "Lucida Console", Monaco, monospace;
+}
+
+.App .side {
+  flex: 1;
+  min-height: 300px;
+  max-width: 400px;
+}
+
+.App header {
+  font-size: 3rem;
+  padding: 40px;
 }
